<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:backgroundTint="@color/primaryLightColor"
    android:layout_gravity="center"

    >



        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/aboutTextMain"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:padding="5dp"
            android:textSize="20dp"
            android:text="@string/permission_title"
           />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            style="@style/aboutTextsub"
            android:textSize="15sp"
            android:justificationMode="inter_word"
            android:text="@string/permissiondesc"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/no"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/aboutTextsub"
            android:justificationMode="inter_word"
            android:text="@string/cancel"
            android:textSize="15dp"
            android:textColor="@color/dialog_color"
            />
        <TextView
            android:id="@+id/yes"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/aboutTextsub"
            android:layout_marginLeft="5dp"
            android:text="@string/yes"
            android:textSize="15dp"
           android:textColor="@color/dialog_color"
            />

    </LinearLayout>
    </LinearLayout>
